<resources>

    <string name="pilih_jumlah">Pilih Jumlah</string>

    <string-array name="jumlah_array">
        <item>5000</item>
        <item>10000</item>
        <item>15000</item>
        <item>20000</item>
    </string-array>

    <string name="app_name">NefStore</string>
    <string name="title_activity_ticket">Data Nasabah</string>
    <string name="nama">Nama</string>
    <string name="norek">Rek.</string>
    <string name="alamat">Alamat</string>
    <string name="tarik">Tarik</string>
    <string name="noatm">No. ATM</string>
    <string name="btn_buy_now">KIRIM</string>
    <string name="value">Jumlah Penarikan</string>
    <string name="saldo">Sisa Saldo</string>
    <string name="setor">Setor</string>
    <string name="msg_no_ticket_found">Nomor ATM tidak ada di database</string>
    <string name="lbl_scan_activity">Scan QR Code</string>
    <string name="tambah">Penarikan</string>
    <string name="keterangan">Keterangan</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="petugas">ID Petugas</string>
    <string name="scan_lagi">Scan Lagi</string>
    <string name="alert_logout">Yakin ingin keluar dari aplikasi ??</string>
    <string name="ya">Ya</string>
    <string name="tidak">Tidak</string>
    <string name="spinner_title">Jumlah</string>

</resources>
