<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    tools:context=".LoginActivity">

   <!-- <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="91dp"
        android:layout_height="94dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:src="@drawable/logo"
        app:civ_border_color="#fdfdfd"
        app:civ_border_width="2dp" />-->

 <com.makeramen.roundedimageview.RoundedImageView xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="125dp"
     android:layout_height="86dp"
     android:layout_alignParentTop="true"
     android:layout_centerHorizontal="true"
     android:layout_marginTop="94dp"
     android:cropToPadding="false"
     android:scaleType="fitXY"
     android:src="@drawable/logo"
     app:riv_border_color="#ffffff"
     app:riv_border_width="2dip"
     app:riv_corner_radius="10dip" />



    <EditText
        android:id="@+id/editTextUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:backgroundTint="@color/graylight"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:textColor="@color/graylight"
        android:textColorHint="@color/lbl_value" />


    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextUser"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/graylight"
        android:layout_marginTop="30dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/graylight"
        android:textColorHint="@color/lbl_value" />

    <EditText
        android:id="@+id/editTextUserId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextPassword"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/graylight"
        android:hint="@string/petugas"
        android:visibility="gone"
        android:text="petugas"
        android:textColor="@color/graylight"
        android:textColorHint="@color/lbl_value" />


    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="144dp"
        android:layout_height="34dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:background="@drawable/login_selector"
        android:text="@string/login"
        android:textColor="#e3f1ff"
        android:textSize="14sp" />

</RelativeLayout>
