<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bsn.nurelfal.ShowSaldo"
    android:background="@color/graylight"
    android:orientation="vertical">

    <com.bsn.nurelfal.NasabahView
        android:id="@+id/layout_ticket"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:orientation="vertical"
        android:paddingTop="@dimen/dimen_10"
        android:visibility="gone">
    </com.bsn.nurelfal.NasabahView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="233dp"
        android:layout_alignParentStart="true"
        android:background="@drawable/gradient_background"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/poster"
            android:layout_width="76dp"
            android:layout_height="67dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="22dp"
            app:civ_border_color="#fdfdfd"
            app:civ_border_width="2dp" />

        <TextView
            android:id="@+id/nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="105dp"
            android:fontFamily="sans-serif-condensed"
            android:textColor="#fff"
            android:textSize="22dp"
            android:textStyle="bold" />
    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="166dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/norek"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/norek"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:textColor="@color/startblue"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/saldo"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/saldo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:textColor="@color/startblue"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/noatm"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/noatm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:textColor="@color/startblue"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="329dp"
        android:layout_alignParentBottom="true"

        android:layout_alignParentStart="true"
        android:layout_marginBottom="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

       <!-- <EditText
            android:id="@+id/inp_idNasabah"
            android:layout_width="317dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="126dp"
            android:hint="idNasabah"

            android:textColor="@color/startblue"
            android:textSize="15sp" />-->


        <Button
            android:id="@+id/btn_logout"
            android:layout_width="144dp"
            android:layout_height="34dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/selector_button"
            android:text="@string/logout"
            android:textColor="#0075EB"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_scan"
            android:layout_width="144dp"
            android:layout_height="34dp"
            android:layout_alignTop="@+id/btn_logout"
            android:background="@drawable/selector_button"
            android:text="@string/scan_lagi"
            android:textColor="#0075EB"
            android:textSize="14sp" />




    </RelativeLayout>


</RelativeLayout>







